2003-05-17  Per Bothner  <per@bothner.com>

	* Invoke.java (inlineClassName):  Take InlineCalls parameter instead
	of Interpreter.  Get latter from former.
	If type is a Classtype and isExisting, emit error is not found.
	* InstanceOf.java (inline):  Upadte call to inlineClassName.
	* SlotGet.java (inline):  Likewise.
	* SlotSet.java (inline):  Likewise.

2003-05-16  Per Bothner  <per@bothner.com>

	* ClassMethods.java (checkName):  Take new 'reversible' parameter.
	* Invoke.java (getMethodName):  Pass false to checkName.
	* SlotGet.java (compile, getReturnType):  Pass true to checkName.
	* SlotSet.java (compile):  Likewise.
	Fixes bug reported 05-13 by Chris Dean <Chris.Dean@sokitomi.com>.

2003-05-13  Per Bothner  <per@bothner.com>

	* OccurrenceType.java:  New class, extends Type.
	* Makefile.am (java_sources):  Add new file.

2003-05-04  Per Bothner  <per@bothner.com>

	* Invoke.java (applyN):  Revert 04-30 change.
	* ClassMethods.java (apply):  Mangle method names non-reversibly.
	(checkName):  Likewise.

2003-04-30  Per Bothner  <per@bothner.com>

	* Invoke.java (applyN):  Use mangleNameIfNeeded rather than plain
	mangleName for consistency.

2002-11-23  Per Bothner  <per@bothner.com>

	* StaticFieldConstraint.java:  Moved from kawa.standard.
	* Makefile.am (java_sources):  Add new file.

2002-11-20  Per Bothner  <bothner@bothner.com>

	* ClassMethods.java:  Convert from ProcedureN to Procedure2.
	(apply2):  New method, replaces applyN.
	(apply(String,String)):  New method.

	* InvokeNamed.java:  Remove - don't need it after all.
	* Makefile.am:  Update accordingly.

2002-11-16  Per Bothner  <per@bothner.com>

	* InvokeNamed.java:  New class, extends ProcedureN.
	* Makefile.am (java_sources):  Add InvokeNamed.java.

2002-11-15  Per Bothner  <per@bothner.com>

	* ClassMethods.java (checkName):  Use Symbol's getName, not toString.

2002-11-10  Per Bothner  <per@bothner.com>

	* Invoke.java (kind):  New otpions 's' is static methods only;  'S' is